--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,4 @@
-# .github/workflows/ci-cd.yml
-name: CI/CD Pipeline
+name: CI/CD for Dockerized flask app
 
 on:
   push:
@@ -8,29 +7,48 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout Code
+      uses: actions/checkout@v3
+    
+    - name: Setup Python
+      uses: actions/checkout@v3
+      with:
+        python-version: '3.9'
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+    - name: Run tests
+      run: |
+        pytest
 
-
-  build:
-    needs: test
+  build-and-publish:
+    needs: build-and-test
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
 
-      - name: Build Docker image
-        run: |
-          docker build -t myusername/myflaskapp:${{ github.sha }} .
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Setup docker buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Login to Dockerhub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
+      with: 
+        context: .
+        file: ./DockerFile
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/stock_prediction:latest
