--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,14 +45,10 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-
-
-        
-
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with: 
         context: .
-        file: ./DockerFile
+        file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/stock_prediction:latest
