--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,6 +7,13 @@ on:
     branches: [ main ]
 
 jobs:
+  dockerbuild:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: action/checkout@v4
+    - name: Build the docker image
+      run: docker build . --file Dockerfile --tag workflow-test:$(data +)
+
   build-and-test:
     runs-on: ubuntu-latest
     
