--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,10 +10,10 @@ jobs:
   dockerbuild:
     runs-on: ubuntu-latest
     steps:
-    - uses: action/checkout@v4
-    - name: Build the docker image
-      run: docker build . --file Dockerfile --tag workflow-test:$(data +)
-
+    - uses: actions/checkout@v4
+    - name: Build The Docker Image
+      run: docker build . --file DockerFile --tag workflow-test:$(date +%s)
+  
   build-and-test:
     runs-on: ubuntu-latest
     
